// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/Justify handles responsive value 1`] = `
{
  "variables": {
    "--rs-justify-l": "end",
    "--rs-justify-m": "center",
    "--rs-justify-s": "start",
  },
}
`;

exports[`Styles/Justify handles undefined value 1`] = `null`;

exports[`Styles/Justify handles value 1`] = `
{
  "variables": {
    "--rs-justify-s": "start",
  },
}
`;
